--- a/plugin-stub/composer.json
+++ b/plugin-stub/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "welabs/plugin-stub",
+    "name": "pluginizelab/plugin-stub",
     "description": "plugin_description",
     "license": "plugin_license",
     "autoload": {
         "psr-4": {
-            "WeLabs\\PluginStub\\": "includes/"
+            "PluginizeLab\\PluginStub\\": "includes/"
         }
     },
     "authors": [
